--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "docs",
-  "version": "0.0.0",
+  "name": "underware-gg-docs",
+  "version": "0.0.1",
   "type": "module",
   "scripts": {
     "dev": "vocs dev",
